--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,7 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react", "@typescript-eslint", "react-hooks", "prettier", "simple-import-sort"],
+  "plugins": ["react", "@typescript-eslint", "react-hooks", "prettier"],
   "rules": {
     "camelcase": "error",
     "no-duplicate-imports": "error",
@@ -29,13 +29,14 @@
     "react-hooks/exhaustive-deps": "off",
     "react/prop-types": 0,
     "react/display-name": 0,
-    "simple-import-sort/imports": "error",
-    "simple-import-sort/exports": "error",
     "@typescript-eslint/no-empty-function": "off",
     "react/no-unknown-property": "off",
     "react/no-unescaped-entities ": "off"
   },
   "settings": {
+    "react": {
+      "version": "detect"
+    },
     "import/resolver": {
       "typescript": {}
     }
