--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "useformer",
+  "name": "strooks-library-skeleton",
   "private": false,
   "version": "0.0.0",
   "type": "module",
@@ -55,9 +55,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.2.0",
     "prettier": "^2.8.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
